--- a/index.ipynb
+++ b/index.ipynb
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "email"
+    "email=\"a\""
    ]
   },
   {
